--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,38 +1,1 @@
-name = "worker-dev"
-main = "dist/index.mjs"
-compatibility_date = "2022-05-28"
-compatibility_flags = []
-
-# [durable_objects]
-# bindings = [
-#   { name = "COUNTER", class_name = "Counter" }
-# ]
-
-# [[migrations]]
-# tag = "v1"
-# new_classes = ["Counter"]
-
-[build]
-command = "node build.js"
-
-[miniflare]
-kv_persist = true
-cache_persist = true
-durable_objects_persist = true
-
-[vars]
-FAUNA_DOMAIN = "localhost"
-FAUNA_SCHEME = "http"
-FAUNA_PORT = 8443
-
-[env.production]
-name = "worker-dev-prod"
-
-[env.production.vars]
-FAUNA_DOMAIN = "db.us.fauna.com"
-FAUNA_SCHEME = "https"
-FAUNA_PORT = 443
-
-# The necessary secrets are:
-# - FAUNA_KEY
-# Run `echo <VALUE> | npx wrangler secret put <NAME> --env production` for each of these
+name = "pages-dev"
