--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,5 +21,5 @@ jobs:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           projectName: pages-dev
-          directory: dist/my-app
+          directory: my-app/dist/my-app
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
